--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=""
+MONGODB_URI="mongodb+srv://gvratnakar:<password>@cluster0.uovpd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
